--- a/app/src/main/res/layout/fragment_offer_view.xml
+++ b/app/src/main/res/layout/fragment_offer_view.xml
@@ -61,7 +61,35 @@
             android:layout_height="wrap_content"
             android:textSize="18dp"
             android:textStyle="bold"
-            android:text="Like this offer"/>
+            android:text="Like this offer"
+            android:layout_marginTop="10dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_user_name_view_offer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginTop="10dp"
+                android:textColor="#111111"
+                />
+
+            <ImageView
+                android:id="@+id/profile_pic_view_offer"
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_profile"
+                android:layout_marginTop="10dp"
+                />
+        </LinearLayout>
 
         <Button
             android:id="@+id/btn_call_to_owner_offer_info"
