--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -26,11 +26,11 @@
         android:id="@+id/btn_my_offers"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:gravity="center"
-        android:layout_marginTop="5dp">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/my_offers_pic_nav_draw"
@@ -45,9 +45,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:text="My Offers"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:text="My Offers"/>
+            android:textSize="18sp" />
     </LinearLayout>
 
     <LinearLayout
