--- a/app/src/main/res/layout/offer_item.xml
+++ b/app/src/main/res/layout/offer_item.xml
@@ -18,7 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,6 +38,8 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textColor="#111111"
                     />
 
                 <TextView
@@ -43,7 +47,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textColor="#111111"/>
 
                 <TextView
                     android:id="@+id/tv_rooms_item"
@@ -51,6 +57,8 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textColor="#111111"
                     />
 
             </LinearLayout>
@@ -70,7 +78,9 @@
             android:id="@+id/tv_neighbourhood_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
