--- a/app/src/main/res/layout/offer_photo_item.xml
+++ b/app/src/main/res/layout/offer_photo_item.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_margin="8dp"
-    android:elevation="10dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    card_view:cardBackgroundColor="@android:color/transparent"
+    card_view:cardElevation="0dp">
 
     <LinearLayout
         android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        >
         <ImageView
             android:id="@+id/img_offer_photo"
             android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"/>
+            android:layout_height="65dp"
+            android:scaleType="fitCenter"
+            android:layout_gravity="center_vertical"/>
         <ImageView
             android:id="@+id/img_delete_offer_photo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:src="@drawable/remove_icon"/>
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/cross_remove_icon"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
