--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
     <style name="MyEditText" parent="TextAppearance.Design.Hint">
         <item name="android:textSize">20sp</item>
         <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center</item>
     </style>
     <style name="MyEditTextLayout" parent="TextAppearance.Design.Hint">
         <item name="android:textSize">18sp</item>
