--- a/app/src/main/res/layout/fragment_create_offer.xml
+++ b/app/src/main/res/layout/fragment_create_offer.xml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <LinearLayout
         android:id="@+id/create_offer_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="16dp">
+        android:layout_margin="16dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="CREATE NEW OFFER"
-            android:gravity="center"
-            android:textSize="20sp" />
         <ImageButton
             android:id="@+id/imgbtn_thumbnail_create"
             android:layout_width="match_parent"
@@ -28,15 +22,28 @@
             android:adjustViewBounds="true"
             android:background="#00ffffff"
             android:scaleType="fitCenter"
-            app:srcCompat="@mipmap/add_btn"
-            />
+            app:srcCompat="@mipmap/add_btn" />
 
-        <ImageButton
-            android:id="@+id/imgbtn_add_photo"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/add_pic_icon"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+            </LinearLayout>
+            <ImageView
+                android:id="@+id/imgbtn_add_photo"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:scaleType="centerInside"
+                android:layout_margin="16dp"
+                android:src="@drawable/add_pic_icon" />
+        </LinearLayout>
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_photos"
@@ -46,10 +53,25 @@
 
         </android.support.v7.widget.RecyclerView>
 
-        <Spinner
-            android:id="@+id/spinnner_neigh_create"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></Spinner>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Choose Neighbourhood ->"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spinnner_neigh_create"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:background="@drawable/spinner_background"></Spinner>
+        </LinearLayout>
+
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -59,12 +81,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
+                android:background="@drawable/input_outline"
                 android:hint="Title"
                 android:inputType="text"
+                android:maxLength="22"
                 android:textAlignment="center"
-                android:textSize="28sp"
-                android:background="@drawable/input_outline"
-                 />
+                android:textSize="28sp" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -82,16 +104,16 @@
                     android:id="@+id/et_rooms_create"
                     android:layout_width="80dp"
                     android:layout_height="60dp"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
                     android:layout_margin="16dp"
-                    android:textSize="18sp"
-                    android:padding="10dp"
-                    android:hint="Rooms"
-                    app:hintTextAppearance="@style/MyEditText"
-                    android:inputType="number"
                     android:background="@drawable/input_outline"
+                    android:hint="Rooms"
+                    android:inputType="number"
                     android:maxLength="1"
+                    android:padding="10dp"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:hintTextAppearance="@style/MyEditText"
 
                     />
 
@@ -106,16 +128,16 @@
                     android:id="@+id/et_price_create"
                     android:layout_width="80dp"
                     android:layout_height="60dp"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
                     android:layout_margin="16dp"
-                    android:textSize="18sp"
-                    android:padding="10dp"
-                    android:hint="Price"
-                    app:hintTextAppearance="@style/MyEditText"
-                    android:inputType="number"
                     android:background="@drawable/input_outline"
+                    android:hint="Price"
+                    android:inputType="number"
                     android:maxLength="4"
+                    android:padding="10dp"
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:hintTextAppearance="@style/MyEditText"
 
                     />
 
@@ -123,27 +145,28 @@
 
             <RadioGroup
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:layout_gravity="center">
+                android:orientation="vertical">
 
                 <RadioButton
                     android:id="@+id/rdbtn_bgn_create"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
+                    android:text="BGN"
                     android:textSize="17sp"
-                    android:textStyle="bold"
-                    android:text="BGN"/>
+                    android:textStyle="bold" />
+
                 <RadioButton
                     android:id="@+id/rdbtn_eu_create"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="EU"
                     android:textSize="17sp"
-                    android:textStyle="bold"
-                    android:text="EU"/>
+                    android:textStyle="bold" />
             </RadioGroup>
 
         </LinearLayout>
@@ -154,19 +177,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:hintTextAppearance="@style/MyEditTextLayout">
+
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_description_create"
 
-                android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="textMultiLine"
+                android:background="@drawable/input_outline"
                 android:gravity="top|left"
-                app:hintTextAppearance="@style/MyEditText"
-                android:minLines="10"
-                android:lines="10"
                 android:hint="Description"
-                android:background="@drawable/input_outline"/>
+                android:inputType="textMultiLine"
+                android:lines="10"
+                android:minLines="10"
+                android:padding="10dp"
+                app:hintTextAppearance="@style/MyEditText" />
         </android.support.design.widget.TextInputLayout>
 
 
@@ -185,16 +209,15 @@
             android:text="Delete Offer"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/btn_cancel_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:text="Cancel"
             android:layout_marginBottom="16dp"
-            />
+            android:text="Cancel"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </ScrollView>
