--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -16,16 +16,12 @@
             android:layout_height="wrap_content"
             android:text="Neighbourhood" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+
             <Spinner
                 android:id="@+id/spinner_neigh"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 />
-        </LinearLayout>
 
 
 
