--- a/app/src/main/res/layout/offer_photo_item.xml
+++ b/app/src/main/res/layout/offer_photo_item.xml
@@ -17,9 +17,10 @@
         >
         <ImageView
             android:id="@+id/img_offer_photo"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="65dp"
             android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
             android:layout_gravity="center_vertical"/>
         <ImageView
             android:id="@+id/img_delete_offer_photo"
