--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,71 +6,102 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     android:padding="20dp"
+    android:background="#FF5252"
     tools:context="com.projects.radomonov.homeless.app.LoginActivity">
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-
-            android:id="@+id/et_email_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="eMail..."
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-
-            android:id="@+id/et_pass_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            />
-    </android.support.design.widget.TextInputLayout>
-
-    <com.google.android.gms.common.SignInButton
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/google_btn_login"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp">
-    </com.google.android.gms.common.SignInButton>
+        android:text="Homeless"
+        android:textColor="@color/colorWhite"
+        android:textStyle="bold"
+        android:textSize="40sp"
+        android:fontFamily="cursive"
+        />
+
+    <ImageView
+        android:id="@+id/image_btn_alert"
+        android:layout_width="156dp"
+        android:layout_height="156dp"
+        android:layout_centerHorizontal="true"
+        android:scaleType="centerCrop"
+        android:contentDescription="image"
+        android:src="@drawable/app_icon_5" />
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/TextLabel">
+
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/et_email_login"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="eMail"
+            android:textColor="@color/colorWhite"
+            android:gravity="center"
+            android:maxLength="20"
+           />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/TextLabel">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/et_pass_login"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password"
+            android:textColor="@color/colorWhite"
+            android:inputType="textPassword"
+            android:gravity="center"
+            />
+    </android.support.design.widget.TextInputLayout>
+
 
     <Button
         android:id="@+id/btn_log_in_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:textSize="16sp"
+        android:textSize="20sp"
+        android:textColor="@color/colorWhite"
         android:textStyle="bold"
-        android:text="Sign in"/>
+        android:text="Login"
+        android:background="@color/colorPrimaryDark"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No account yet? "
+            android:textSize="18sp"
+            android:textColor="#ffffff"/>
+
+        <TextView
+            android:id="@+id/create_account_text_login_act"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/create_one_login"
+            android:textSize="18sp"
+            android:textColor="#111111"
+            android:textStyle="bold"
+            android:clickable="true"
+            />
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_create_log"
-        android:layout_width="match_parent"
-        android:layout_margin="16dp"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="Create new Account"/>
+
 
 </LinearLayout>
