--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,89 +6,112 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
+    android:gravity="center"
+    android:background="#FF5252"
     tools:context="com.projects.radomonov.homeless.app.RegisterActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Homeless"
+        android:textColor="@color/colorWhite"
+        android:textStyle="bold"
+        android:textSize="40sp"
+        android:fontFamily="cursive"
+        />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/TextLabel">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/et_nick_name_reg"
             android:layout_width="match_parent"
-            android:layout_margin="16dp"
             android:layout_height="wrap_content"
-            android:hint="Enter your NickName"
-            android:gravity="center" />
+            android:hint="NickName"
+            android:textColor="@color/colorWhite"
+            android:gravity="center"
+            android:maxLength="13"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/TextLabel">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/et_email_reg"
             android:layout_width="match_parent"
-            android:layout_margin="16dp"
             android:layout_height="wrap_content"
-            android:hint="Enter your eMail"
+            android:hint="eMail"
+            android:textColor="@color/colorWhite"
             android:gravity="center"
+            android:maxLength="20"
             />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/TextLabel">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/et_phone_number_reg"
             android:layout_width="match_parent"
-            android:layout_margin="16dp"
             android:layout_height="wrap_content"
-            android:hint="Enter your phone Number"
+            android:hint="Phone Number"
+            android:textColor="@color/colorWhite"
             android:gravity="center"
             android:inputType="number"
+            android:maxLength="13"
             />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/TextLabel">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/et_password_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
             android:inputType="textPassword"
-            android:hint="Enter Password"
+            android:textColor="@color/colorWhite"
+            android:hint="Password"
             android:gravity="center"
+            android:maxLength="13"
             />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/TextLabel">
 
         <android.support.design.widget.TextInputEditText
 
             android:id="@+id/et_confirm_password_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
             android:inputType="textPassword"
             android:hint="Confirm Password"
+            android:textColor="@color/colorWhite"
             android:gravity="center"
+            android:maxLength="13"
             />
     </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btn_register_reg"
         android:layout_width="match_parent"
-        android:layout_margin="16dp"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:layout_marginTop="20dp"
+        android:textSize="20sp"
+        android:textColor="@color/colorWhite"
         android:textStyle="bold"
-        android:text="Register"/>
+        android:text="Register"
+        android:background="@color/colorPrimaryDark"/>
 
 </LinearLayout>
