--- a/app/src/main/res/layout/fragment_offer_view.xml
+++ b/app/src/main/res/layout/fragment_offer_view.xml
@@ -60,6 +60,7 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="#111111"
+            android:background="@drawable/input_outline"
             />
 
         <TextView
@@ -71,7 +72,17 @@
             android:layout_marginTop="15dp"
             android:textStyle="bold"
             android:textSize="20sp"
-            android:textColor="#111111"/>
+            android:textColor="#111111"
+            android:background="@drawable/input_outline"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description:"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:layout_marginTop="15dp"/>
 
         <TextView
             android:id="@+id/text_description_offer_info"
@@ -79,37 +90,60 @@
             android:layout_height="wrap_content"
             android:text="Description"
             android:gravity="center"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="5dp"
             android:textStyle="bold"
             android:textSize="20sp"
-            android:textColor="#111111"/>
+            android:textColor="#111111"
+            android:background="@drawable/input_outline"/>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_user_name_view_offer"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:layout_marginTop="10dp"
-                android:textColor="#111111"
+                android:textColor="@color/colorAccent"
+                android:text="Posted by:"
                 />
 
-            <ImageView
-                android:id="@+id/profile_pic_view_offer"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_profile"
-                android:layout_marginTop="10dp"
-                />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:orientation="vertical"
+                >
+                <ImageView
+                    android:id="@+id/profile_pic_view_offer"
+                    android:layout_width="85dp"
+                    android:layout_height="85dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_profile"
+                    />
+                <TextView
+                    android:id="@+id/tv_user_name_view_offer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="22sp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="#111111"
+                    />
+            </LinearLayout>
+
+
         </LinearLayout>
 
 
@@ -128,7 +162,7 @@
                 android:text="Contact owner:"
                 android:textStyle="bold"
                 android:textSize="18sp"
-                android:textColor="#111111"/>
+                android:textColor="@color/colorAccent"/>
 
             <ImageView
                 android:id="@+id/btn_call_to_owner_offer_info"
