--- a/app/src/main/res/layout/fragment_create_offer.xml
+++ b/app/src/main/res/layout/fragment_create_offer.xml
@@ -74,13 +74,15 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:hintTextAppearance="@style/MyEditTextLayout">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_title_create"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
+                app:hintTextAppearance="@style/MyEditText"
                 android:background="@drawable/input_outline"
                 android:hint="Title"
                 android:inputType="text"
@@ -111,7 +113,7 @@
                     android:maxLength="1"
                     android:padding="10dp"
                     android:textAlignment="center"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:hintTextAppearance="@style/MyEditText"
 
