--- a/app/src/main/res/layout/neighbourhood_item.xml
+++ b/app/src/main/res/layout/neighbourhood_item.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginRight="8dp"
-    android:elevation="10dp">
+    card_view:cardBackgroundColor="@android:color/transparent"
+    card_view:cardElevation="0dp" >
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:orientation="horizontal"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        >
         <TextView
             android:id="@+id/tv_neighbourhood_item"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_marginRight="8dp"
+            android:textColor="@android:color/black"
+            />
         <ImageView
             android:id="@+id/img_remove_neighbourhood_item"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/remove_icon"/>
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/cross_remove_icon"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
