--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -23,8 +23,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add Neighbourhood   ->"
-                android:textSize="18sp"
+                android:text="Add Neighbourhood->"
+                android:textSize="17sp"
                 android:textColor="#000000"
                 android:textAlignment="center"
                 />
@@ -72,12 +72,12 @@
                     android:id="@+id/et_price_min"
                     android:layout_width="63dp"
                     android:layout_height="60dp"
-                    android:layout_margin="16dp"
+                    android:layout_margin="8dp"
                     android:background="@drawable/input_outline"
                     android:hint="Min"
                     android:inputType="number"
                     android:maxLength="4"
-                    android:padding="10dp"
+                    android:padding="5dp"
                     android:textAlignment="center"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -96,12 +96,12 @@
                     android:id="@+id/et_price_max"
                     android:layout_width="63dp"
                     android:layout_height="60dp"
-                    android:layout_margin="16dp"
+                    android:layout_margin="8dp"
                     android:background="@drawable/input_outline"
                     android:hint="Max"
                     android:inputType="number"
                     android:maxLength="4"
-                    android:padding="10dp"
+                    android:padding="5dp"
                     android:textAlignment="center"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -205,10 +205,12 @@
                 android:layout_height="60dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/arrow_hide"
-                android:layout_marginRight="0dp"
+                android:layout_marginRight="8dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp" />
         </android.support.constraint.ConstraintLayout>
 
 
