added star image for like button, custom method isStarChecked

--- a/app/src/main/res/layout/fragment_offer_view.xml
+++ b/app/src/main/res/layout/fragment_offer_view.xml
@@ -36,19 +36,17 @@
                 android:layout_weight="1">
             </LinearLayout>
 
-            <CheckBox
-                android:id="@+id/cb_like_this_offer"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:text="Like this offer"
-                android:layout_marginTop="10dp"/>
+            <ImageView
+                android:id="@+id/image_star_like_this_offer"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/star_btn_empty"
+                android:layout_marginRight="20dp"
+                android:clickable="true"/>
+
 
         </LinearLayout>
-
-
 
         <TextView
             android:id="@+id/text_rooms_neigborhood_offer_info"
