--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:text="Homeless"
         android:textColor="@color/colorWhite"
         android:textStyle="bold"
-        android:textSize="40sp"
+        android:textSize="45sp"
         android:fontFamily="cursive"
         />
 
@@ -43,6 +43,7 @@
             android:textColor="@color/colorWhite"
             android:gravity="center"
             android:maxLength="20"
+            android:maxLines="1"
            />
 
     </android.support.design.widget.TextInputLayout>
@@ -60,6 +61,7 @@
             android:textColor="@color/colorWhite"
             android:inputType="textPassword"
             android:gravity="center"
+            android:maxLines="1"
             />
     </android.support.design.widget.TextInputLayout>
 
