--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,7 +32,8 @@
             android:hint="NickName"
             android:textColor="@color/colorWhite"
             android:gravity="center"
-            android:maxLength="13"/>
+            android:maxLength="13"
+            android:maxLines="1"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -44,11 +45,11 @@
             android:id="@+id/et_email_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="eMail"
-            android:textColor="@color/colorWhite"
             android:gravity="center"
+            android:hint="eMail"
             android:maxLength="20"
-            />
+            android:maxLines="1"
+            android:textColor="@color/colorWhite" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -65,6 +66,7 @@
             android:gravity="center"
             android:inputType="number"
             android:maxLength="13"
+            android:maxLines="1"
             />
     </android.support.design.widget.TextInputLayout>
 
@@ -82,6 +84,7 @@
             android:hint="Password"
             android:gravity="center"
             android:maxLength="13"
+            android:maxLines="1"
             />
     </android.support.design.widget.TextInputLayout>
 
@@ -100,6 +103,7 @@
             android:textColor="@color/colorWhite"
             android:gravity="center"
             android:maxLength="13"
+            android:maxLines="1"
             />
     </android.support.design.widget.TextInputLayout>
 
