--- a/app/src/main/res/layout/fragment_offer_view.xml
+++ b/app/src/main/res/layout/fragment_offer_view.xml
@@ -43,8 +43,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:src="@drawable/star_btn_empty"
-                android:layout_marginRight="20dp"
-                android:clickable="true"/>
+                android:layout_marginRight="20dp"/>
 
 
         </LinearLayout>
